# sermon-manager

./: .env  .gitignore  README.md  convert_csv_bible_to_sqlite.py  index.html  package-lock.json  package.json  tailwind.config.js
data/: sermons.db-shm  sermons.db-wal
server/: ai.js  bundle-version.txt  db.js  dev.js  index.js  package-lock.json  package.json  schema.sql  verseParser.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: api.js
