[package]
name = "sermon-manager"
version = "0.1.0"
description = "Sermon Manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
